--- a/detail.html
+++ b/detail.html
@@ -47,7 +47,7 @@
       </div>
 
       <div class='demo_button'>
-      	<button><a href="albums.html">Ipod Player Demo</a></button>
+      	<button><a onClick="window.open('albums.html');">Ipod Player Demo</a></button>
       </div>
 
     </div>
