--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="project-text">
                 <h2>Image Mosaic</h2>
                 <p>Implemented panorama effect for mutiple input images.</p>
-                <button><a href="documents/ImageMosaic.pdf">See for detail</a></button>
+                <button><a onClick="window.open('documents/ImageMosaic.pdf');">See for detail</a></button>
             </div>
         </div>
 
@@ -59,7 +59,7 @@
             <div class="project-text">
                 <h2>Synthetic Wavelength Holography</h2>
                 <p>Used synthetic wavelength to image 'Non-Line-of-Sight'</p>
-                <button><a href="documents/SWH.pdf">See for detail</a></button>
+                <button><a onClick="window.open('documents/SWH.pdf');">See for detail</a></button>
             </div>
         </div>
     </div>
